floated prev link left to fix resize layout issue in Chrome

--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -101,6 +101,9 @@
       vertical-align: top;
       padding-right: 4%;
     }
+    .prev {
+      float: left;
+    }
     .next {
       text-align: right;
       padding: 0 0 0 4%;
